revoke DID added
